--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -139,3 +139,11 @@
 .button__contact:hover {
   color: #FE5F1E !important; 
 }
+.button--exit {
+  background-color: #282828!important;
+  // width: 10px !important;
+  padding: 10px 7px 10px 15px !important;
+  min-width: 40px!important;
+  // margin: 10px;
+  border-radius: 21px !important;
+}
